<resources>
    <string name="app_name">EasyCity</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">457593628232044</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb457593628232044</string>

    <string name="title_activity_easy_city_maps">easyCityMap</string>
    <string name="logo_description">easyCityLogo</string>
    <string name="email">   Email ...</string>
    <string name="password"> Password ...</string>
    <string name="confirm_password">confirm password</string>
    <string name="createaccountbuttontext">Δημιουργία Λογαριασμού</string>
    <string name="login">Login</string>
    <string name="login_info">Δεν υπάρχει ο λογαριασμός. Θέλετε έναν;</string>
    <string name="loginwith">ή συνδεθείτε με</string>
    <string name="fbicon">fbicon</string>
    <string name="googleicon">googleicon</string>
    <string name="add_new_post">Find Scooter</string>
    <string name="home">My Position</string>
    <string name="friends">Your Proposals</string>
    <string name="find_friends">Find Bonus</string>
    <string name="messages">History</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="username">TextView</string>

    <!-- Default screen margins, per the Android Design guidelines. -->
    <dimen name="activity_horizontal_margin">16dp</dimen>
    <dimen name="activity_vertical_margin">16dp</dimen>

</resources>
