<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/browser_actions_divider_color">


    <ImageView
        android:id="@+id/loginImageView2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="124dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="430dp"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="342dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email32p"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="277dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/lock_alert32"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp" />

    <Button
        android:id="@+id/login_button"
        style="@style/FirebaseUI.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:background="@drawable/button"
        android:padding="15dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="158dp"
        android:text="@string/login_info"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="126dp"
        android:text="@string/loginwith"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/facebook_signin_button"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/fbicon"
            android:src="@drawable/facebook_box" />

        <ImageView
            android:id="@+id/google_signin_button"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="145dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/googleicon"
            android:src="@drawable/common_google_signin_btn_icon_dark" />

    </LinearLayout>


</RelativeLayout>